# melior

./: .rustfmt.toml  Cargo.toml  README.md  cspell.json
.github/actions/setup/: action.yaml
.github/workflows/: document.yaml  lint.yaml  release.yaml  test.yaml
macro/: Cargo.toml  build.rs
macro/src/: attribute.rs  dialect.rs  lib.rs  pass.rs  type.rs  utility.rs
macro/src/dialect/: error.rs  generation.rs  input.rs  operation.rs  utility.rs
macro/src/dialect/error/: ods.rs
macro/src/dialect/generation/: operation_builder.rs
macro/src/dialect/input/: input_field.rs
macro/src/dialect/operation/: attribute.rs  builder.rs  operand.rs  region.rs  result.rs  successor.rs  variadic_kind.rs
macro/src/dialect/operation/builder/: type_state.rs
macro/tests/: first_attr_derived_result_type.rs  operand.rs  region.rs  same_operands_result_type.rs  utility.rs
macro/tests/ods_include/: first_attr_derived_result_type.td  same_operands_result_type.td
macro/tests/ui/: file_not_found.rs  file_not_found.stderr
melior/: Cargo.toml  build.rs
melior/src/: context.rs  diagnostic.rs  dialect.rs  error.rs  execution_engine.rs  greedy_rewrite_driver.rs  ir.rs  ir_rewriter.rs  lib.rs  logical_result.rs  pass.rs  rewrite_pattern.rs  string_ref.rs  test.rs  thread_pool.rs  utility.rs
melior/src/diagnostic/: severity.rs
melior/src/dialect/: arith.rs  cf.rs  enzyme.rs  func.rs  handle.rs  index.rs  llvm.rs  memref.rs  ods.rs  registry.rs  scf.rs
melior/src/dialect/llvm/: attributes.rs  global.rs  load_store_options.rs  type.rs
melior/src/dialect/snapshots/: melior__dialect__arith__tests__arith.truncf.snap  melior__dialect__enzyme__tests__compile_autodiff.snap  melior__dialect__enzyme__tests__compile_batch.snap  melior__dialect__enzyme__tests__compile_fwddiff.snap  melior__dialect__enzyme__tests__compile_jacobian.snap  melior__dialect__llvm__tests__compile_addressof.snap  melior__dialect__llvm__tests__compile_bitcast.snap  melior__dialect__llvm__tests__compile_call.snap  melior__dialect__llvm__tests__compile_call_intrinsic.snap  melior__dialect__llvm__tests__compile_constant.snap  melior__dialect__llvm__tests__compile_global_variable.snap  melior__dialect__llvm__tests__compile_icmp.snap  melior__dialect__llvm__tests__compile_indirect_call.snap  melior__dialect__llvm__tests__compile_unreachable.snap  melior__dialect__ods__tests__addf.snap
melior/src/helpers/: llvm.rs
melior/src/ir/: affine_expr.rs  affine_map.rs  attribute.rs  block.rs  bytecode_writer_config.rs  identifier.rs  location.rs  module.rs  operation.rs  region.rs  type.rs  value.rs
melior/src/ir/attribute/: array.rs  attribute_like.rs  bool.rs  dense_elements.rs  dense_i32_array.rs  dense_i64_array.rs  dictionary.rs  distinct.rs  flat_symbol_ref.rs  float.rs  integer.rs  macro.rs  strided_layout.rs  string.rs  type.rs
melior/src/ir/block/: argument.rs  block_like.rs
melior/src/ir/operation/: builder.rs  operation_like.rs  printing_flags.rs  result.rs
melior/src/ir/region/: region_like.rs
melior/src/ir/type/: function.rs  id.rs  integer.rs  macro.rs  mem_ref.rs  ranked_tensor.rs  shaped_type_like.rs  tuple.rs  type_like.rs
melior/src/ir/type/id/: allocator.rs
melior/src/ir/value/: value_like.rs
melior/src/pass/: affine.rs  amdgpu.rs  arith.rs  arm_sme.rs  async.rs  bufferization.rs  conversion.rs  emitc.rs  external.rs  func.rs  gpu.rs  linalg.rs  llvm.rs  manager.rs  math.rs  memref.rs  ml_program.rs  nvgpu.rs  open_acc.rs  operation_manager.rs  scf.rs  shape.rs  shard.rs  sparse_tensor.rs  spirv.rs  tensor.rs  tosa.rs  transform.rs  transform_dialect.rs  vector.rs
melior/tests/: expand_dialect.rs
tools/: setup.sh
