[package]
name = "melior-macro"
version = "0.18.1"
edition = "2021"
description = "Internal macros for Melior"
documentation = "https://mlir-rs.github.io/melior/melior/"
readme = "../README.md"
repository = "https://github.com/mlir-rs/melior"
license = "Apache-2.0"
keywords = ["llvm", "mlir"]

[lib]
proc-macro = true

[dependencies]
comrak = { version = "0.47.0", default-features = false }
convert_case = "0.10.0"
proc-macro2 = "1"
quote = "1"
regex = "1.12.2"
syn = { version = "2", features = ["full"] }
tblgen = { version = "0.7.2", default-features = false, features = [
  "llvm21-0",
] }
unindent = "0.2.4"

[dev-dependencies]
melior = { path = "../melior", features = ["ods-dialects"] }
mlir-sys = "210.0.1"
pretty_assertions = "1.4.1"
