[package]
name = "melior"
description = "The rustic MLIR bindings in Rust"
version = "0.26.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/mlir-rs/melior"
documentation = "https://mlir-rs.github.io/melior/melior/"
keywords = ["mlir", "llvm"]
categories = ["api-bindings"]

[features]
ods-dialects = []
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]

[dependencies]
melior-macro = { version = "0.19.0", path = "../macro" }
mlir-sys = "210.0.1"

[dev-dependencies]
indoc = "2.0.7"
insta = "1.45.1"
pretty_assertions = "1.4.1"
