[package]
name = "melior"
version = "0.26.2"
edition = "2021"
description = "The rustic MLIR bindings in Rust"
documentation = "https://mlir-rs.github.io/melior/melior/"
repository = "https://github.com/mlir-rs/melior"
license = "Apache-2.0"
keywords = ["llvm", "mlir"]
categories = ["api-bindings"]

[dependencies]
melior-macro = { path = "../macro", version = "0.19.0" }
mlir-sys = "210.0.1"

[dev-dependencies]
indoc = "2.0.7"
insta = "1.46.0"
pretty_assertions = "1.4.1"

[features]
# Enable the BlockExt trait (requires ods feature)
helpers = ["ods-dialects"]
ods-dialects = []
